--- a/skysub.tex
+++ b/skysub.tex
@@ -616,9 +616,8 @@ However, the systematic photometric bias at the level of $0.03$~mag is negligibl
 \subsection{Frame residuals shapes}
 \label{sec:frameblockresiduals}
 
-In the previous two sections we have established the presence of an additive contamination in WIRCam sky flats that varies over the course of a night and has a slight ($<0.1$~mag) influence on photometric calibration.
-Here we demonstrate how contamination in sky flats influences our observations of M31's surface brightness by examining the residual shapes of individual frames against the median shape of the disk (as assembled in our wide-field mosaic, \sec{scalar}).
-% TODO
+The previous two sections we have established the presence of an additive contamination in WIRCam sky flats that varies over the course of a night and has a slight ($<0.1$~mag) influence on photometric calibration.
+Here we demonstrate how contamination in sky flats influences our observations of M31's surface brightness by examining the residual shapes of individual frames against the median shape of the disk (as assembled in our wide-field mosaic, \Sec{scalar}).
 This also provides a test of the timescale on which the intrinsic WIRCam flat field function is stable.
 If the residuals of datasets treated by \texttt{QRUN} or \texttt{NIGHT} sky flats vary systematically with time, in correspondence with the results of \Sec{flatevo}, then the flat field function of WIRCam truly would be variable throughout a night, and \texttt{FW100K} sky flats should be most appropriate.
 This effect should be exacerbated in signal- (not sky-) dominated fields as flat field errors grow in proportion to signal strength.
@@ -626,7 +625,7 @@ This effect should be exacerbated in signal- (not sky-) dominated fields as flat
 Our 2009B observations of field M31-37 in the $K_s$ band are ideal for this experiment: a single detector in that field covers the core of M31, and observations were taken into two blocks, covering a total window of 2~hours (most blocks for this program are observed by the CFHT queue in a half hour).
 Both the high surface brightness and wide time baseline in this field should highlight flat field bias and variation.
 In Figures~\ref{fig:frame_residuals_M31-37_Ks_fw100k_medsky},~\ref{fig:frame_residuals_M31-37_Ks_nightset}~and~\ref{fig:frame_residuals_M31-37_Ks_QRUN} we show the residual shapes of individual WIRCam frames against the median shape of the mosaic, given \texttt{FW100K}, \texttt{NIGHT} and \texttt{QRUN} sky flattening, respectively, in field M31-37 in the $K_s$ band.
-That is, we produce difference images between each WIRCam frame and the block mosaic.
+% That is, we produce difference images between each WIRCam frame and the block mosaic.
 To analyze the shapes of these difference images we then marginalize the difference images along rows (left side of \Fig{frame_residuals_M31-37_Ks_fw100k_medsky}), and columns (right side of \Fig{frame_residuals_M31-37_Ks_fw100k_medsky}).
 Note that these marginalization are done for each detector in the $2\times2$ WIRCam array; the core of M31 resides in detector \#2 (lower-right).
 In that high surface brightness region, there are strong surface brightness residuals that clearly point out flaws in the flat field itself.
@@ -680,17 +679,15 @@ We now extend the previous analysis analysis across the entire dataset.
 In \Fig{frame_diffs_skyfrac} we plot the distribution of frame-block residual shape amplitudes, measured at the 95\% difference interval.
 In essence, this measures the consistency of imaging the shape of each M31 block.
 As in our test of median sky frame flatness (\Sec{medianskyshapes}), we see that the consistency of frame shapes is $\sim 0.3\%$ of the background level.
-This result is seen for both \texttt{QRUN} and \texttt{FW100K} sky flat pipelines and for 2007B and 2009B observing schemes, agreeing with our observation in \Sec{frameblockresiduals} that in background dominated regimes (as most of our blocks are) frame shape consistency is \emph{not} correlated with flat field bias.
+This result is seen universally among the \texttt{QRUN}, \texttt{NIGHT}  and \texttt{FW100K} sky flat pipelines and for 2007B and 2009B observing schemes, agreeing with our observation in \Sec{frameblockresiduals} that in background dominated regimes (as most of our blocks are) frame shape consistency is \emph{not} correlated with flat field bias.
 Rather, we interpret \Fig{frame_diffs_skyfrac} as measuring the amplitudes of \emph{additive} stochastic background shapes originating either from the sky, or associated with the instrumentation itself.
 Effectively, \Fig{frame_diffs_skyfrac} illustrates the \emph{flatness limit} of WIRCam frames observed with large sky-target nods, sky flat fielding, and median sky subtraction.
-
-\todo{Update with NIGHT flats}.
 
 \begin{figure}[t]
 \centering
 \includegraphics[width=\columnwidth]{figs/frame_residuals/framediffs_skyfrac_cdf}
 \caption{Cumulative distributions of scalar difference amplitudes between individual frames and blocks in the $J$ (top) and $K_s$ (bottom) mosaics, measured as a dispersion of pixel differences at the 95\% level.
-Whether processed with \texttt{QRUN} (red) or \texttt{FW100k} (blue) sky flats, or observed in 2007B (solid lines) or 2009B (dotted lines), the residual amplitude differences between frames and blocks are similarly distributed.
+  Whether processed with \texttt{QRUN} (red), \texttt{NIGHT} (green) or \texttt{FW100k} (blue) sky flats, or observed in 2007B (solid lines) or 2009B (dotted lines), the residual amplitude differences between frames and blocks are similarly distributed.
 The expected amplitude difference is $0.3\%$ of the $J$ background brightness ($0.2\%$ in $K_s$).
 }
 % Made with andpipe/wircam/shape/frame_block_residuals/plot_frame_residuals_hists.py
